--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,22 +6,31 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: cfcdn1.sanfencdn9.com
     port: 2052
     cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    uuid: 8c7b39d2-eb80-48d4-9471-76bddc5273c8
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/GQ2qE5Us9g
       headers:
-        host: helanv6cf.inekokkk.top
+        host: tw1bQiWSE4x.fzbqfrse.xyz
   - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    name: 🇺🇸_US_美国_2
+    type: trojan
+    server: 23.142.200.175
+    port: 443
+    udp: true
+    password: 27876_t7d7f4e3f
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
     server: 104.18.19.191
     port: 2052
@@ -35,8 +44,8 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+  - &id004
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: 104.19.250.15
     port: 2052
@@ -50,19 +59,8 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id004
-    name: 🇱🇺_LU_卢森堡
-    type: vmess
-    server: 45.82.31.164
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
   - &id005
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
     server: 104.18.36.119
     port: 2052
@@ -77,44 +75,30 @@ proxies:
       headers:
         host: helanv6cf.inekokkk.top
   - &id006
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 46.226.162.112
-    port: 32913
-    password: KTwIQM1cQJwtkrjfld6Usn
-    cipher: chacha20-ietf-poly1305
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 158.51.123.111
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
   - &id007
-    name: 🇳🇱_NL_荷兰
-    type: ss
-    server: 109.201.152.181
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id008
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇪🇸_ES_西班牙
     type: trojan
-    server: 23.142.200.175
-    port: 443
+    server: fuck6.mmmmmmmmmm.cfd
+    port: 48057
     udp: true
-    password: 27876_t7d7f4e3f
+    password: 2062a5ca-a34e-47bf-9810-db91185f07fc
+    sni: apple.com
     skip-cert-verify: true
     network: tcp
-  - &id009
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 38.110.1.111
-    port: 8000
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id010
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 34.212.89.209
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇺🇸_US_美国_4
+  - &id008
+    name: 🇨🇾_CY_塞浦路斯->🇨🇦_CA_加拿大
     type: vmess
     server: yh9.dtku41.xyz
     port: 8080
@@ -128,10 +112,25 @@ proxies:
       path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
       headers:
         host: hang-broke-john-neither.trycloudflare.com
-  - &id012
-    name: 🇺🇸_US_美国_5
+  - &id009
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: yh7.dtku41.xyz
+    server: 104.19.40.84
+    port: 8880
+    cipher: auto
+    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /d/65dd503.TG.WangCai2.WangCai_8:107690
+      headers:
+        host: uk.moss.network
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.17.17.103
     port: 8080
     cipher: auto
     uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
@@ -179,8 +178,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -196,8 +193,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
   - name: SELECT
     type: select
     proxies:
@@ -211,8 +206,6 @@ proxy-groups:
       - *id008
       - *id009
       - *id010
-      - *id011
-      - *id012
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
