--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,17 +6,28 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇱🇺_LU_卢森堡
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 45.82.31.164
-    port: 3389
+    server: cfcdn1.sanfencdn9.com
+    port: 2095
     cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    uuid: 7c42a3f8-cb73-4338-91e6-eef9e7346b12
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: http
+    network: ws
+    ws-opts:
+      path: /video/qYZue4zaWS
+      headers:
+        host: us82pRzxDMb.fzbqfrse.xyz
   - &id002
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 129.146.102.22
+    port: 34017
+    password: N0k6tSWblI
+    cipher: aes-256-gcm
+  - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
     server: 104.19.250.15
@@ -31,7 +42,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id003
+  - &id004
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: 104.18.36.119
@@ -46,7 +57,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id004
+  - &id005
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
     server: 104.18.19.191
@@ -61,13 +72,6 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id005
-    name: 🇺🇸_US_美国
-    type: ss
-    server: 129.146.102.22
-    port: 34017
-    password: N0k6tSWblI
-    cipher: aes-256-gcm
   - &id006
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
     type: vmess
@@ -84,7 +88,62 @@ proxies:
       headers:
         host: helanv6cf.inekokkk.top
   - &id007
+    name: 🇱🇺_LU_卢森堡
+    type: vmess
+    server: 45.82.31.164
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id008
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id009
     name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: 104.19.40.48
+    port: 8880
+    cipher: auto
+    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /d/65dd503.TG.WangCai2.WangCai_8:107690
+      headers:
+        host: uk.moss.network
+  - &id010
+    name: 🇩🇪_DE_德国
+    type: ss
+    server: 80.92.204.106
+    port: 9094
+    password: rpgbNnU9rDDU4aWZ
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 38.114.114.143
+    port: 443
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id012
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 104.19.40.222
     port: 8880
@@ -98,6 +157,43 @@ proxies:
       path: /d/65dd503.TG.WangCai2.WangCai_8:107690
       headers:
         host: uk.moss.network
+  - &id013
+    name: 🇩🇪_DE_德意志联邦共和国
+    type: vmess
+    server: 23.158.56.50
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id014
+    name: 🇶🇦_QA_卡塔尔
+    type: vmess
+    server: 54.38.212.91
+    port: 80
+    cipher: auto
+    uuid: 9e660680-e7bb-4725-f1c9-84d1fdbbf5c6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: www.gov.uk
+  - &id015
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: de2-full.privateip.net
+    port: 443
+    udp: true
+    password: dcf0fcec-3800-4f42-9b78-1323f6a4a004
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -131,6 +227,14 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -143,6 +247,14 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
   - name: SELECT
     type: select
     proxies:
@@ -153,6 +265,14 @@ proxy-groups:
       - *id005
       - *id006
       - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
