--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,28 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2095
-    cipher: auto
-    uuid: 7c42a3f8-cb73-4338-91e6-eef9e7346b12
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/qYZue4zaWS
-      headers:
-        host: us82pRzxDMb.fzbqfrse.xyz
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 129.146.102.22
-    port: 34017
-    password: N0k6tSWblI
-    cipher: aes-256-gcm
-  - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
     server: 104.19.250.15
@@ -42,7 +20,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id004
+  - &id002
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: 104.18.36.119
@@ -57,7 +35,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id005
+  - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
     server: 104.18.19.191
@@ -72,7 +50,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id006
+  - &id004
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
     type: vmess
     server: cfcdn1.sanfencdn9.com
@@ -87,7 +65,14 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id007
+  - &id005
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 38.114.114.143
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id006
     name: 🇱🇺_LU_卢森堡
     type: vmess
     server: 45.82.31.164
@@ -98,23 +83,8 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id008
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: 104.21.8.157
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id009
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+  - &id007
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
     server: 104.19.40.48
     port: 8880
@@ -128,22 +98,54 @@ proxies:
       path: /d/65dd503.TG.WangCai2.WangCai_8:107690
       headers:
         host: uk.moss.network
-  - &id010
-    name: 🇩🇪_DE_德国
+  - &id008
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id009
+    name: 🇺🇸_US_美国_2
     type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 38.114.114.143
+    server: 156.146.38.163
     port: 443
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id011
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: trojan
+    server: 36.138.99.56
+    port: 40316
+    udp: true
+    password: MyYoZhfX
+    skip-cert-verify: true
+    network: tcp
   - &id012
-    name: 🇺🇸_US_美国_4
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
     type: vmess
     server: 104.19.40.222
     port: 8880
@@ -158,19 +160,88 @@ proxies:
       headers:
         host: uk.moss.network
   - &id013
-    name: 🇩🇪_DE_德意志联邦共和国
-    type: vmess
-    server: 23.158.56.50
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
+    name: 🇰🇷_KR_韩国
+    type: trojan
+    server: 103.214.68.57
+    port: 10003
+    udp: true
+    password: 6x8HcghsjS
+    sni: yes998.chickenkiller.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
+    network: tcp
   - &id014
+    name: 🇬🇧_GB_英国_1
+    type: ss
+    server: 172.99.190.198
+    port: 2375
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 205.134.180.145
+    port: 443
+    password: hgLCgfLRgB6d
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 69.50.93.111
+    port: 6679
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇩🇪_DE_德意志联邦共和国_1
+    type: ss
+    server: 23.158.56.17
+    port: 7307
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
+  - &id018
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 142.202.51.58
+    port: 8080
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id019
+    name: 🇩🇪_DE_德意志联邦共和国_2
+    type: ss
+    server: 23.158.56.196
+    port: 8882
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id020
+    name: 🇳🇱_NL_荷兰_1
+    type: trojan
+    server: nl2-full.privateip.net
+    port: 443
+    udp: true
+    password: 6e28f704-29a0-4c86-b25b-dd090603c741
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 38.86.135.141
+    port: 8882
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id022
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 38.86.135.223
+    port: 5499
+    password: lGqs95QkFHo2NV
+    cipher: aes-256-gcm
+  - &id023
+    name: 🇺🇸_US_美国_8
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id024
     name: 🇶🇦_QA_卡塔尔
     type: vmess
     server: 54.38.212.91
@@ -185,15 +256,19 @@ proxies:
       path: /?ed=2048
       headers:
         host: www.gov.uk
-  - &id015
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: de2-full.privateip.net
+  - &id025
+    name: 🇳🇱_NL_荷兰_2
+    type: vmess
+    server: nl2-full.privateip.net
     port: 443
-    udp: true
-    password: dcf0fcec-3800-4f42-9b78-1323f6a4a004
+    cipher: auto
+    uuid: b7a0cf39-99fa-47a4-8d9f-5263806e8cce
+    alterId: 0
+    tls: true
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /RACEVPN
 proxy-groups:
   - name: PROXY
     type: select
@@ -235,6 +310,16 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -255,6 +340,16 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -273,6 +368,16 @@ proxy-groups:
       - *id013
       - *id014
       - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
