--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,7 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 104.19.250.15
+    server: 104.18.19.191
     port: 2052
     cipher: auto
     uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
@@ -23,7 +23,7 @@ proxies:
   - &id002
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: 104.18.36.119
+    server: 104.19.250.15
     port: 2052
     cipher: auto
     uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
@@ -38,7 +38,7 @@ proxies:
   - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
-    server: 104.18.19.191
+    server: 104.18.36.119
     port: 2052
     cipher: auto
     uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
@@ -51,6 +51,35 @@ proxies:
       headers:
         host: helanv6cf.inekokkk.top
   - &id004
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: hk.wish.ml
+    port: 2052
+    cipher: auto
+    uuid: 543f15f1-96a8-4205-b4a2-1a1ae6766c12
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: in3.wish.ml
+  - &id005
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 169.197.142.216
+    port: 6679
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 169.197.142.216
+    port: 7002
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id007
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
     type: vmess
     server: cfcdn1.sanfencdn9.com
@@ -65,14 +94,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id005
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 38.114.114.143
-    port: 4444
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
-  - &id006
+  - &id008
     name: 🇱🇺_LU_卢森堡
     type: vmess
     server: 45.82.31.164
@@ -83,181 +105,36 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id007
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: 104.19.40.48
-    port: 8880
-    cipher: auto
-    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /d/65dd503.TG.WangCai2.WangCai_8:107690
-      headers:
-        host: uk.moss.network
-  - &id008
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
   - &id009
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 156.146.38.163
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 23.162.200.227
     port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
   - &id010
-    name: 🇺🇸_US_美国_3
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
-    server: 104.21.8.157
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id011
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: trojan
-    server: 36.138.99.56
-    port: 40316
-    udp: true
-    password: MyYoZhfX
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: 104.19.40.222
-    port: 8880
-    cipher: auto
-    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /d/65dd503.TG.WangCai2.WangCai_8:107690
-      headers:
-        host: uk.moss.network
-  - &id013
-    name: 🇰🇷_KR_韩国
-    type: trojan
-    server: 103.214.68.57
-    port: 10003
-    udp: true
-    password: 6x8HcghsjS
-    sni: yes998.chickenkiller.com
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 172.99.190.198
-    port: 2375
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id015
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 205.134.180.145
-    port: 443
-    password: hgLCgfLRgB6d
-    cipher: chacha20-ietf-poly1305
-  - &id016
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 69.50.93.111
-    port: 6679
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id017
-    name: 🇩🇪_DE_德意志联邦共和国_1
-    type: ss
-    server: 23.158.56.17
-    port: 7307
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id018
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 142.202.51.58
+    server: yh4.dtku41.xyz
     port: 8080
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id019
-    name: 🇩🇪_DE_德意志联邦共和国_2
-    type: ss
-    server: 23.158.56.196
-    port: 8882
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id020
-    name: 🇳🇱_NL_荷兰_1
-    type: trojan
-    server: nl2-full.privateip.net
-    port: 443
-    udp: true
-    password: 6e28f704-29a0-4c86-b25b-dd090603c741
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 38.86.135.141
-    port: 8882
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id022
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 38.86.135.223
-    port: 5499
-    password: lGqs95QkFHo2NV
-    cipher: aes-256-gcm
-  - &id023
-    name: 🇺🇸_US_美国_8
-    type: ss
-    server: 212.102.47.198
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id024
-    name: 🇶🇦_QA_卡塔尔
-    type: vmess
-    server: 54.38.212.91
-    port: 80
     cipher: auto
-    uuid: 9e660680-e7bb-4725-f1c9-84d1fdbbf5c6
+    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /?ed=2048
+      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
       headers:
-        host: www.gov.uk
-  - &id025
-    name: 🇳🇱_NL_荷兰_2
+        host: dual-nothing-prep-exit.trycloudflare.com
+  - &id011
+    name: 🇳🇱_NL_荷兰
     type: vmess
     server: nl2-full.privateip.net
     port: 443
@@ -269,6 +146,36 @@ proxies:
     network: ws
     ws-opts:
       path: /RACEVPN
+      headers:
+        host: nl2-full.privateip.net
+  - &id012
+    name: 🇺🇸_US_美国_3
+    type: trojan
+    server: de2-full.privateip.net
+    port: 443
+    udp: true
+    password: dcf0fcec-3800-4f42-9b78-1323f6a4a004
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 95.164.117.128
+    port: 443
+    udp: true
+    password: dcf0fcec-3800-4f42-9b78-1323f6a4a004
+    sni: de2-full.privateip.net
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: trojan
+    server: 36.138.99.56
+    port: 40316
+    udp: true
+    password: MyYoZhfX
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -309,17 +216,6 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -339,17 +235,6 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -367,17 +252,6 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
