--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -9,6 +9,21 @@ proxies:
     name: 🇺🇸_US_美国_1
     type: vmess
     server: cfcdn1.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: 7f40abd1-6397-4706-8510-bc5d08df8ad5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/GQ2qE5Us9g
+      headers:
+        host: tw1bQiWSE4x.fzbqfrse.xyz
+  - &id002
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.19.138.73
     port: 2082
     cipher: auto
     uuid: 7f40abd1-6397-4706-8510-bc5d08df8ad5
@@ -20,70 +35,48 @@ proxies:
       path: /video/CuTy87zAzV/
       headers:
         host: us4Bb5oSgJA.fzbqfrse.xyz
-  - &id002
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 104.19.250.15
-    port: 2052
-    cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: helanv6cf.inekokkk.top
   - &id003
-    name: 🇱🇺_LU_卢森堡
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 45.82.31.164
-    port: 3389
+    server: 46.3.82.198
+    port: 80
     cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    uuid: e57d6217-18be-49f4-b40c-3ace76fd1a5a
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: http
   - &id004
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 104.18.36.119
-    port: 2052
+    server: cfcdn1.sanfencdn9.com
+    port: 2082
     cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    uuid: 7f40abd1-6397-4706-8510-bc5d08df8ad5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/CuTy87zAzV/
       headers:
-        host: helanv6cf.inekokkk.top
+        host: us4Bb5oSgJA.fzbqfrse.xyz
   - &id005
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 104.18.19.191
-    port: 2052
+    server: 162.159.33.117
+    port: 2082
     cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    uuid: 7f40abd1-6397-4706-8510-bc5d08df8ad5
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/CuTy87zAzV/
       headers:
-        host: helanv6cf.inekokkk.top
+        host: us4Bb5oSgJA.fzbqfrse.xyz
   - &id006
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 212.102.47.198
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id007
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 104.21.8.157
@@ -98,43 +91,42 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
+  - &id007
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 38.114.114.143
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
   - &id008
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id009
+    name: 🇱🇺_LU_卢森堡
     type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
+    server: 45.82.31.164
+    port: 3389
     cipher: auto
-    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: helanv6cf.inekokkk.top
-  - &id009
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: trojan
-    server: 36.138.99.56
-    port: 40316
-    udp: true
-    password: MyYoZhfX
-    skip-cert-verify: true
-    network: tcp
+    network: http
   - &id010
-    name: 🇩🇪_DE_德意志联邦共和国
+    name: 🇬🇧_GB_英国->🇺🇸_US_美国
     type: vmess
-    server: 23.158.56.50
+    server: 89.213.164.154
     port: 443
     cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    uuid: e57d6217-18be-49f4-b40c-3ace76fd1a5a
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
+    network: http
   - &id011
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
@@ -151,38 +143,99 @@ proxies:
       headers:
         host: s1c.v2.v001sss.xyz
   - &id012
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 18.189.91.107
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.burgerip.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id013
-    name: 🇨🇦_CA_加拿大_1
-    type: ss
-    server: 23.162.200.181
-    port: 8080
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id014
-    name: 🇨🇦_CA_加拿大_2
-    type: ss
-    server: 23.162.200.181
-    port: 8000
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id015
-    name: 🇺🇸_US_美国_5
+    name: 🇩🇪_DE_德意志联邦共和国
     type: vmess
-    server: 104.19.173.68
+    server: 23.158.56.50
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id013
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 23.162.200.227
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id014
+    name: 🇬🇧_GB_英国
+    type: vmess
+    server: 89.213.164.154
     port: 80
     cipher: auto
-    uuid: bdeaba4b-bdac-426f-94f2-16a63d91352f
+    uuid: e57d6217-18be-49f4-b40c-3ace76fd1a5a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 46.3.82.198
+    port: 443
+    cipher: auto
+    uuid: e57d6217-18be-49f4-b40c-3ace76fd1a5a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id016
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: trojan
+    server: 36.138.99.56
+    port: 40316
+    udp: true
+    password: MyYoZhfX
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: zf.lalayun.cyou
+    port: 10163
+    cipher: auto
+    uuid: b1553abe-6f1f-3288-bfc2-908b2f9fc4fc
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /v2ray
+      headers:
+        host: hk.lalayunssl.xyz
+  - &id018
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 172.67.164.78
+    port: 80
+    cipher: auto
+    uuid: 42507d7c-bc67-4534-8ffc-6b9234b74018
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /cctv13/hd.m3u8
+      headers:
+        host: mai.nekoneko.buzz
+  - &id019
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 104.19.250.15
+    port: 2052
+    cipher: auto
+    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -190,70 +243,37 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: ustoucjjnid18sj6us.lovebaipiao.com
-  - &id016
-    name: 🇨🇦_CA_加拿大_3
-    type: ss
-    server: 23.162.200.181
-    port: 8118
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
-  - &id017
-    name: 🇨🇦_CA_加拿大_4
-    type: ss
-    server: 23.162.200.181
-    port: 2376
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id018
-    name: 🇨🇦_CA_加拿大_5
-    type: ss
-    server: 23.162.200.181
-    port: 7001
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id019
-    name: 🇨🇦_CA_加拿大_6
-    type: trojan
-    server: 3.97.29.230
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.burgerip.co.uk
-    skip-cert-verify: true
-    network: tcp
+        host: helanv6cf.inekokkk.top
   - &id020
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: 18.134.191.135
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trojan.burgerip.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇰🇷_KR_韩国->🇷🇺_RU_俄罗斯联邦
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: 210.87.195.254
-    port: 60999
+    server: 104.18.36.119
+    port: 2052
     cipher: auto
-    uuid: e8c6eb94-0c48-49de-c3eb-e305a26d1074
+    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /TG@dns68维护
+      path: /
       headers:
-        host: tg.dns68.9669.link
-  - &id022
-    name: 🇧🇩_BD_孟加拉国
-    type: ss
-    server: 103.106.2.90
-    port: 8881
-    password: oxp4Xr64OKpXV127Zwtzl14P8L8PovqbFGPHbnbhRf7CxCSW1E
-    cipher: chacha20-ietf-poly1305
+        host: helanv6cf.inekokkk.top
+  - &id021
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    type: vmess
+    server: 104.18.19.191
+    port: 2052
+    cipher: auto
+    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: helanv6cf.inekokkk.top
 proxy-groups:
   - name: PROXY
     type: select
@@ -301,7 +321,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -328,7 +347,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
   - name: SELECT
     type: select
     proxies:
@@ -353,7 +371,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
