--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,21 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
-    cipher: auto
-    uuid: 2eec45db-dfcd-43d6-8514-b141aff651be
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/GQ2qE5Us9g
-      headers:
-        host: tw1bQiWSE4x.fzbqfrse.xyz
-  - &id002
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
     server: 104.19.250.15
@@ -35,7 +20,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id003
+  - &id002
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: 104.18.19.191
@@ -50,7 +35,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id004
+  - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
     server: 104.18.36.119
@@ -65,18 +50,7 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id005
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 183.240.255.91
-    port: 44001
-    cipher: auto
-    uuid: aaaaaaaa-aaaa-aaaa-aaaa-daaaaaaaaaad
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
+  - &id004
     name: 🇱🇺_LU_卢森堡
     type: vmess
     server: 45.82.31.164
@@ -87,28 +61,42 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id007
-    name: 🇺🇸_US_美国_2
+  - &id005
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 104.18.242.177
-    port: 2052
+    server: cdn.bethebest.eu.org
+    port: 8880
     cipher: auto
-    uuid: 2eec45db-dfcd-43d6-8514-b141aff651be
+    uuid: 86a0a07a-d0ed-480a-aa2a-f1a96592747e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /video/GQ2qE5Us9g
+      path: /
       headers:
-        host: tw1bQiWSE4x.fzbqfrse.xyz
-  - &id008
-    name: 🇩🇪_DE_德国
+        host: us.bethebest.eu.org
+  - &id006
+    name: 🇩🇪_DE_德国_1
     type: ss
-    server: 5.78.92.197
+    server: 80.92.204.106
+    port: 9094
+    password: rpgbNnU9rDDU4aWZ
+    cipher: aes-256-cfb
+  - &id007
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 52.88.161.5
     port: 443
-    password: b4JbN1PzQa3eyV1UWcAInY
-    cipher: chacha20-ietf-poly1305
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id008
+    name: 🇩🇪_DE_德国_2
+    type: ss
+    server: 80.92.204.106
+    port: 9080
+    password: VP8ZPxQpJtZRCjfZ
+    cipher: aes-256-cfb
   - &id009
     name: 🇺🇸_US_美国_3
     type: ss
@@ -118,23 +106,15 @@ proxies:
     cipher: aes-128-cfb
   - &id010
     name: 🇺🇸_US_美国_4
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 8880
-    cipher: auto
-    uuid: 2eec45db-dfcd-43d6-8514-b141aff651be
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/bYdJ7Vc2We
-      headers:
-        host: us6gzxQRrE4.fzbqfrse.xyz
-  - &id011
-    name: 🇺🇸_US_美国_5
     type: ss
     server: 156.146.38.163
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id011
+    name: 🇳🇱_NL_荷兰
+    type: ss
+    server: 109.201.152.181
     port: 443
     password: shadowsocks
     cipher: aes-128-cfb
